# nlp100knocks

./: README.md  pyproject.toml
chapter01/: answer05.py  answer06.py  answer08.py
chapter02/: answer10.py  answer11.py  answer15.py  answer16.py  answer18.py  answer19.py  prepare.sh
chapter03/: answer21.py  answer22.py  answer23.py  answer24.py  answer25.py  answer26.py  answer27.py  answer29.py  prepare.sh
chapter04/: answer30.py  answer32.py  answer35.py  answer36.py  answer37.py  answer39.py
chapter05/: answer40.py  answer42.py  answer43.py  answer44.py  answer45.py  answer49.py
chapter06/: answer50.py  answer51.py  answer52.py  answer55.py  answer56.py  answer57.py  answer59.py  prepare.sh
chapter07/: answer62.py  answer63.py  answer64.py  answer65.py  answer67.py  answer69.py  prepare.sh
chapter08/: answer70.py  answer73.py  answer74.py  prepare.sh
chapter09/: answer80.py  answer82.py  answer83.py  answer84.py  answer85.py  answer86.py  answer87.py  answer89.py  prepare.sh
chapter1/: answer00.py  answer01.py  answer02.py  answer03.py  answer04.py  answer05.py  answer07.py  answer08.py  answer09.py  test05.py  test07.py  test08.py  test09.py
chapter10/: answer90.py  answer91.py  answer92.py  answer93.py  answer94.py  answer95.py  answer96.py  answer97.py  answer98.py  answer99.py  prepare.sh
chapter2/: answer12.py  answer13.py  answer14.py  answer17.py  prepare.sh
chapter3/: answer20.py  answer28.py  prepare.sh
chapter4/: answer31.py  answer33.py  answer34.py  answer38.py  base.py  prepare.sh
chapter5/: answer41.py  answer46.py  answer47.py  (+1 more)
(+28 files in other folders)
