[project]
name = "nlp100knocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "gdown>=5.2.0",
    "gensim>=4.3.2",
    "google>=3.0.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "vllm>=0.9.1",
]
